# pyconnectwise

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  __init__.py  generate_models.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi-publish.yml  pytest.yml  python-publish.yml
src/pyconnectwise/: __init__.py  config.py  exceptions.py  interfaces.py  types.py
src/pyconnectwise/clients/: automate_client.py  change_request_client.py  connectwise_client.py  manage_client.py
src/pyconnectwise/endpoints/automate/: ApitokenEndpoint.py  ApprovalpoliciesEndpoint.py  AvtemplatepoliciesEndpoint.py  AvtemplatepolicydataEndpoint.py  ClientsEndpoint.py  ClientsIdDocumentsEndpoint.py  ClientsIdEndpoint.py  ClientsIdLicensesEndpoint.py  ClientsIdPermissionsEndpoint.py  ClientsIdPermissionsIdEndpoint.py  ClientsIdProductkeysEndpoint.py  CommandsEndpoint.py  CommandsIdEndpoint.py  ComputermenusEndpoint.py  ComputersChassisEndpoint.py  ComputersDrivesEndpoint.py  ComputersEndpoint.py  ComputersIdAlertsEndpoint.py  ComputersIdAlertsuspensionsEndpoint.py  ComputersIdAlertsuspensionsMaintenancewindowEndpoint.py  ComputersIdAlertsuspensionsTemplatediversionEndpoint.py  ComputersIdBiosEndpoint.py  ComputersIdCommandexecuteEndpoint.py  ComputersIdCommandhistoryEndpoint.py  ComputersIdComputerpatchingpoliciesEndpoint.py  ComputersIdDevicesEndpoint.py  ComputersIdDriversEndpoint.py  ComputersIdDrivesEndpoint.py  ComputersIdDrivesIdEndpoint.py  ComputersIdDrivesIdSmartdataEndpoint.py  ComputersIdEffectivepatchingpolicyEndpoint.py  ComputersIdEndpoint.py  ComputersIdMicrosoftupdatesEndpoint.py  ComputersIdMonitoralertsuspensionsEndpoint.py  ComputersIdMonitorsEndpoint.py  ComputersIdOperatingsystemEndpoint.py  ComputersIdPatchingstatsEndpoint.py  ComputersIdPatchjobsEndpoint.py  ComputersIdPrintersEndpoint.py  ComputersIdProcessorsEndpoint.py  (+134 more)
src/pyconnectwise/endpoints/base/: connectwise_endpoint.py
src/pyconnectwise/endpoints/change_request/: AclsRolesEndpoint.py  ChangeRequestEndpoint.py  ChangeRequestIdEndpoint.py  ChangeRequestsEndpoint.py  ChangeTypeEndpoint.py  DefaultSettingsEndpoint.py  GetStatsEndpoint.py  LoginEndpoint.py  SetSettingsEndpoint.py  SettingsEndpoint.py  TemplateEndpoint.py  UserIdEndpoint.py  UsersEndpoint.py
src/pyconnectwise/endpoints/manage/: CompanyAddressFormatsCountEndpoint.py  CompanyAddressFormatsEndpoint.py  CompanyAddressFormatsIdEndpoint.py  CompanyAddressFormatsIdInfoEndpoint.py  CompanyAddressFormatsInfoCountEndpoint.py  CompanyAddressFormatsInfoEndpoint.py  CompanyAddressformatsCountEndpoint.py  CompanyAddressformatsEndpoint.py  CompanyAddressformatsIdEndpoint.py  CompanyAddressformatsIdInfoEndpoint.py  CompanyAddressformatsInfoCountEndpoint.py  CompanyAddressformatsInfoEndpoint.py  CompanyBillingSetupsInfoCountEndpoint.py  CompanyBillingsetupsEndpoint.py  CompanyBillingsetupsInfoCountEndpoint.py  CompanyBillingsetupsInfoEndpoint.py  CompanyCommunicationTypesCountEndpoint.py  CompanyCommunicationTypesEndpoint.py  CompanyCommunicationTypesIdEndpoint.py  CompanyCommunicationTypesIdInfoEndpoint.py  CompanyCommunicationTypesIdUsagesEndpoint.py  CompanyCommunicationTypesIdUsagesListEndpoint.py  CompanyCommunicationTypesInfoCountEndpoint.py  CompanyCommunicationTypesInfoEndpoint.py  CompanyCommunicationtypesCountEndpoint.py  CompanyCommunicationtypesEndpoint.py  CompanyCommunicationtypesIdEndpoint.py  CompanyCommunicationtypesIdInfoEndpoint.py  CompanyCommunicationtypesIdUsagesEndpoint.py  CompanyCommunicationtypesIdUsagesListEndpoint.py  CompanyCommunicationtypesInfoCountEndpoint.py  CompanyCommunicationtypesInfoEndpoint.py  CompanyCompaniesCountEndpoint.py  CompanyCompaniesDefaultEndpoint.py  CompanyCompaniesEndpoint.py  CompanyCompaniesIdCustomStatusNotesCountEndpoint.py  CompanyCompaniesIdCustomStatusNotesEndpoint.py  CompanyCompaniesIdCustomStatusNotesIdEndpoint.py  CompanyCompaniesIdCustomstatusnotesCountEndpoint.py  CompanyCompaniesIdCustomstatusnotesEndpoint.py  (+2500 more)
src/pyconnectwise/models/automate/: __init__.py
src/pyconnectwise/models/base/: connectwise_model.py  message_model.py
src/pyconnectwise/models/change_request/: __init__.py
src/pyconnectwise/models/manage/: AccountingBatchModel.py  AccountingPackageModel.py  AccountingPackageReferenceModel.py  AccountingPackageSetupModel.py  ActivityModel.py  ActivityReferenceModel.py  ActivityStatusInfoModel.py  ActivityStatusModel.py  ActivityStatusReferenceModel.py  ActivityStopwatchModel.py  ActivityTypeModel.py  ActivityTypeReferenceModel.py  AdditionModel.py  AddressFormatInfoModel.py  AddressFormatModel.py  AddressFormatReferenceModel.py  AdjustmentDetailModel.py  AdjustmentDetailReferenceModel.py  AdjustmentModel.py  AdjustmentReferenceModel.py  AdjustmentTypeInfoModel.py  AdjustmentTypeModel.py  AdjustmentTypeReferenceModel.py  Agreement.py  AgreementBatchSetupModel.py  AgreementBillingInfoModel.py  AgreementModel.py  AgreementReferenceModel.py  AgreementRevenueReferenceModel.py  AgreementSiteModel.py  AgreementTypeBoardDefaultModel.py  AgreementTypeInfoModel.py  AgreementTypeModel.py  AgreementTypeReferenceModel.py  AgreementTypeWorkRoleExclusionModel.py  AgreementTypeWorkRoleInfoModel.py  AgreementTypeWorkRoleModel.py  AgreementTypeWorkTypeExclusionModel.py  AgreementTypeWorkTypeModel.py  AgreementWorkRoleExclusionModel.py  (+704 more)
src/pyconnectwise/responses/: paginated_response.py
src/pyconnectwise/utils/: fs.py  helpers.py  naming.py
src/pyconnectwise/utils/experimental/: condition.py  patch_maker.py
src/pyconnectwise/utils/generator/: __main__.py  client_gen.py  endpoint_gen.py  generate.py  model_gen.py  model_postprocessor.py  (+4 more)
src/pyconnectwise_generator/: __main__.py  client_gen.py  endpoint_gen.py  model_postprocessor.py  models.py  normalize_schema_refs.py  parser.py  path_formatting.py  templates.py
src/pyconnectwise_generator/templates/: automate_client_template.py.jinja2  endpoint_template.py.jinja2  manage_client_template.py.jinja2
src/pyconnectwise_generator/utils/: fs.py
tests/clients/: test_change_approvals.py  test_connectwise_client.py
(+103 files in other folders)
